# rumc

./: Cargo.toml
src/: file_manager.rs  input.rs  main.rs  ui.rs  vfs.rs
