[package]
name = "rumc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
ratatui = "0.26" # TUI
crossterm = "0.27" # Ввод/вывод в терминале
clap = { version = "4.4", features = ["derive"] } # Обработка команд
walkdir = "2.3" # Работа с файлами
ssh2 = "0.9" # Поддержка SFTP
zip = "0.6" # Работа с ZIP
tar = "0.4" # Работа с TAR
